--- a/modules/puppet/files/master/puppet.conf
+++ b/modules/puppet/files/master/puppet.conf
@@ -11,10 +11,9 @@ templatedir=$confdir/templates
 # and can safely be removed if webrick is used.
 ssl_client_header = SSL_CLIENT_S_DN
 ssl_client_verify_header = SSL_CLIENT_VERIFY
-
 storeconfigs = true
 dbadapter = mysql
 dbuser = puppet
-dbpassword = puppet
+dbpassword = password
 dbserver = localhost
 dbsocket = /var/run/mysqld/mysqld.sock
