--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ tmp
 modules/*
 !modules/puppet
 
+# Openstack campaign files
+modules/puppet/files/master/autosign.conf
+modules/puppet/files/master/install.pp
+modules/puppet/files/master/openstack.pp
+nodes
+kavlan_nodes
+
 # YARD artifacts
 .yardoc
 _yardoc
