--- a/modules/puppet/files/master/puppet.conf
+++ b/modules/puppet/files/master/puppet.conf
@@ -1,3 +1,4 @@
+# MANAGED BY PUPPET
 [main]
 logdir=/var/log/puppet
 vardir=/var/lib/puppet
@@ -7,10 +8,6 @@ factpath=$vardir/lib/facter
 templatedir=$confdir/templates
 
 [master]
-# These are needed when the puppetmaster is run by passenger
-# and can safely be removed if webrick is used.
-ssl_client_header = SSL_CLIENT_S_DN
-ssl_client_verify_header = SSL_CLIENT_VERIFY
 storeconfigs = true
 dbadapter = mysql
 dbuser = puppet
